Modify styles to prevent gap under footer

--- a/planner/static/planner/styles.css
+++ b/planner/static/planner/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box; 
 }
 
-body {
+html, body {
     padding: 0;
     margin: 0;
 }
